# Assignment_3

./: .gitignore  docker-compose.yml  requirements.txt  user_data.db
.github/workflows/: fastapi-test-cli.yml  static.yml
airflow/: Dockerfile  docker-compose.yaml  requirements.txt
airflow/dags/: airflow_geos18.sql  airflow_nexrad.sql  airflow_nexradmap.sql  airflow_scrape_data.db  airflow_user_api.sql  airflow_users.sql  scrape_airflow.py
data_as_service/: docker-compose.yml
fast-api/: Dockerfile  api_test_main.py  apimain.py  authenticate_user.py  current_user.py  database_file.py  jwt_api.py  requirements.txt  schemas.py  typerapp.py  user_data.db  user_data.py  user_db_model.py
fast-api/router/: aws_s3_fetchfile.py  aws_s3_files.py  noaa_database.py  user_logs.py
fastapiapp/: Dockerfile  airflow_scrape_data.db  api_test_main.py  apimain.py  authenticate_user.py  aws_s3_fetchfile.py  aws_s3_files.py  current_user.py  database_file.py  jwt_api.py  noaa_database.py  requirements.txt  schemas.py  user_data.db  user_data.py  user_data.sql  user_db_model.py
fastapiapp/router/: aws_s3_fetchfile.py  aws_s3_files.py  noaa_database.py
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: checkpoint_name.yml
great_expectations/expectations/: .ge_store_backend_id  noaa_geos18_suite.json  (+1 more)
streamlit/: .py  Dockerfile  Login_Page.py  requirements.txt
typer/typer_package/: pyproject.toml
typer/typer_package/src/: main.py
typer/typerpackage/: README.md  main.py  pyproject.toml
typer/typerpackage/typerpackage/: main.py
(+20 files in other folders)
